# Midi-Project

./: .gitignore  README.md  mido.py  pyproject.toml  yaml.py
examples/: make_chiptune.py  make_gospel_ballad.py  make_pack.py  make_synthwave.py
genre_midi/: __init__.py  cli.py  engine.py  humanize.py  midi.py  pack.py  preview.py  progressions.py  recipes.py  theory.py
genre_midi/generators/: __init__.py  arrangement.py  bass.py  chords.py  drums.py  melody.py
genre_midi/presets/: ambient.yaml  boom_bap.yaml  chillwave.yaml  chiptune.yaml  edm.yaml  gospel_ballad.yaml  synthwave.yaml  trance.yaml
tests/: test_cli.py  test_engine.py  test_midi_export.py  test_pack.py  test_progressions.py  test_recipes.py  test_theory.py
