[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genre-midi-lab"
version = "0.1.0"
description = "Generate original MIDI files from genre recipe presets"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "genre-midi-lab contributors"}]
dependencies = [
  "mido>=1.3.0",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
genre-midi = "genre_midi.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["genre_midi*"]

[tool.setuptools.package-data]
genre_midi = ["presets/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["."]
